Update Starfinder zh.json (#5063)
* Update zh.json

更新部分中文

* Update zh.json

* Update zh.json

--- a/Starfinder by Roll20/translations/zh.json
+++ b/Starfinder by Roll20/translations/zh.json
@@ -38,23 +38,19 @@
 	"debilitated": "DEBILITATED",
 	"bedridden": "BEDRIDDEN",
 	"comatose": "COMATOSE",
-	"dead": "死亡",
 	"mental-disease": "MENTAL DISEASE",
 	"befuddled": "BEFUDDLED",
 	"disassociated": "DISASSOCIATED",
 	"strength-poison": "STRENGTH POISON",
 	"healthy' selected='selected": "HEALTHY",
-	"staggered": "恍惚",
 	"immobile": "IMMOBILE",
 	"dexterity-poison": "DEXTERITY POISON",
 	"sluggish": "SLUGGISH",
 	"stiffened": "STIFFENED",
 	"constitution-poison": "CONSTITUTION POISON",
-	"unconscious": "昏迷",
 	"intelligence-poison": "INTELLIGENCE POISON",
 	"animalistic": "ANIMALISTIC",
 	"wisdom-poison": "WISDOM POISON",
-	"confused": "困惑",
 	"charisma-poison": "CHARISMA POISON",
 	"pliable": "PLIABLE",
 	"catatonic": "CATATONIC",
@@ -62,9 +58,11 @@
 	"bleeding": "流血",
 	"blinded": "目盲",
 	"burning": "燃燒",
+	"confused": "困惑",
 	"cowering": "畏縮",
 	"dazed": "暈眩",
 	"dazzled": "目眩",
+	"dead": "死亡",	
 	"deafened": "耳聾",
 	"dying": "瀕死",
 	"encumbered": "重載",
@@ -78,7 +76,7 @@
 	"helpless": "無助",
 	"nauseated": "反胃",
 	"negative_levels": "負向等級",
-	"off_kilter": "失衡（",
+	"off_kilter": "失衡",
 	"off_target": "失準",
 	"overburdened": "超載",
 	"panicked": "恐慌",
@@ -89,6 +87,8 @@
 	"sickened": "噁心",
 	"stable": "穩定",
 	"stunned": "震懾",
+	"staggered": "恍惚",
+	"unconscious": "昏迷",
 	"npc": "NPC",
 	"ship": "飛船",
 	"drone": "無人機",
@@ -125,15 +125,15 @@
 	"spell": "法術",
 	"poor": "弱",
 	"good": "強",
-	"menus": "MENUS",
+	"menus": "列表",
 	"initiative": "先攻",
 	"attacks": "攻擊",
 	"attack": "攻擊",
 	"damage": "傷害",
 	"saves": "豁免",
 	"abilities-u": "能力",
-	"ability-checks": "ABILITY CHECKS",
-	"buffs": "BUFFS",
+	"ability-checks": "屬性檢定",
+	"buffs": "增益狀態",
 	"mods": "MODS",
 	"ability-scores": "屬性值",
 	"mod": "MOD",
@@ -171,9 +171,9 @@
 	"engineering": "工程學",
 	"intimidate": "威嚇",
 	"life-science": "生命科學",
-	"medicine": "醫學 ",
-	"mysticism": "MYSTICISM ",
-	"perception": "察覺 ",
+	"medicine": "醫學",
+	"mysticism": "神秘學",
+	"perception": "察覺",
 	"physical-science": "物理科學",
 	"piloting": "駕駛",
 	"sense-motive": "察言觀色",
@@ -182,8 +182,8 @@
 	"survival": "生存",
 	"name-u": "名稱",
 	"lvl": "等級",
-	"Not-Proficient": "不擅長",
-	"proficient": "擅長",
+	"Not-Proficient": "不熟練",
+	"proficient": "熟練",
 	"specialized": "專精",
 	"category": "分類",
 	"atk-u": "攻擊檢定",
@@ -193,9 +193,9 @@
 	"dmg": "傷害骰",
 	"type": "類型",
 	"damage-type": "傷害類型",
-	"crit-damage": "重擊傷害",
+	"crit-damage": "爆擊傷害",
 	"ammo": "彈藥",
-	"usage": "USAGE",
+	"usage": "用法",
 	"special": "特殊",
 	"additional-attack": "額外攻擊",
 	"roll-full-attack_": "使用全力攻擊: ",
@@ -211,7 +211,7 @@
 	"encumber": "重載",
 	"over": "上限",
 	"credits": "信用點",
-	"wealth": "WEALTH",
+	"wealth": "財富",
 	"upbs": "UPBs",
 	"num": "數量",
 	"bulk": "負載",
@@ -234,7 +234,7 @@
 	"int": "智力",
 	"wis": "感知",
 	"cha": "魅力",
-	"based-dc_": "基本DC ",
+	"based-dc_": "基礎 DC",
 	"fort-save": "強韌豁免",
 	"ref-save": "反射豁免",
 	"will-save": "意志豁免",
@@ -264,7 +264,7 @@
 	"dr": "DR",
 	"immunities": "免疫",
 	"sr": "SR",
-	"resistances": "抗力",
+	"resistances": "抗性",
 	"weaknesses": "弱點",
 	"offense": "攻擊",
 	"space": "佔據",
@@ -285,17 +285,17 @@
 	"export": "EXPORT",
 	"paizo-statblock": "PAIZO STATBLOCK",
 	"srd-statblock": "SRD STATBLOCK",
-	"starship-info": "STARSHIP INFO",
-	"starship-name": "STARSHIP NAME",
+	"starship-info": "星船詳情",
+	"starship-name": "星船名稱",
 	"tier": "TIER",
 	"make-and-model": "MAKE AND MODEL",
 	"frame": "FRAME",
 	"maneuverability": "MANEUVERABILITY",
 	"drift-rating": "DRIFT RATING",
 	"crew": "CREW",
-	"captain": "CAPTAIN",
-	"engineer": "ENGINEER",
-	"pilot": "PILOT",
+	"captain": "艦長",
+	"engineer": "工程師",
+	"pilot": "駕駛",
 	"gunner": "GUNNER",
 	"gunnery": "GUNNERY",
 	"science-officer": "SCIENCE OFFICER ",
@@ -345,11 +345,11 @@
 	"port (4)": "PORT (4)",
 	"aft (3)": "AFT (3)",
 	"1st-attack": "1st ATTACK",
-	"targets": "TARGETS",
+	"targets": "目標",
 	"full-effect:": "FULL EFFECT:",
 	"save": "SAVE",
 	"dc": "DC",
-	"save-effect:": "SAVE EFFECT:",
+	"save-effect:": "豁免效果:",
 	"notes:": "NOTES:",
 	"level": "等級 ",
 	"roll-crit": "ROLL CRITICAL EFFECT",
@@ -380,7 +380,7 @@
 	"fine": "FINE",
 	"diminutive": "DIMINUTIVE",
 	"long": "LONG",
-	"crit-effect": "重擊效果",
+	"crit-effect": "爆擊效果",
 	"ability_checks": "屬性檢定",
 	"ability_scores": "屬性值",
 	"crb-equipment": "CRB EQUIPMENT",
@@ -388,7 +388,7 @@
 	"caster-level_": "CASTER LEVEL ",
 	"power": "POWER",
 	"which-gunner": "Which Gunner",
-	"range": "RANGE",
+	"range": "射程",
 	"hexes": "HEXES",
 	"light": "LIGHT",
 	"heavy": "HEAVY WEAPON",
@@ -403,7 +403,7 @@
 	"shield-bonus": "SHIELD BONUS",
 	"shields": "SHIELDS",
 	"activation": "ACTIVATION",
-	"tiny": "超小型",
+	"tiny": "微型",
 	"small": "小型",
 	"large": "大型",
 	"huge": "超大型",
@@ -413,7 +413,7 @@
 	"average": "AVERAGE",
 	"perfect": "PERFECT",
 	"n/a": "N/A",
-	"disclaimer": "© 2018. Starfinder, the Starfinder logo, the Paizo golem, all Paizo titles, the Starfinder Roleplaying Game rules, and Paizo’s character names and distinctive likenesses are property and copyright of Paizo, Inc. in the United States and other countries. 正體中文翻譯:白貓(僅使用已有的譯名進行翻譯，剩下就是涼透了沒人要翻譯)",
+	"disclaimer": "© 2018. Starfinder, the Starfinder logo, the Paizo golem, all Paizo titles, the Starfinder Roleplaying Game rules, and Paizo’s character names and distinctive likenesses are property and copyright of Paizo, Inc. in the United States and other countries. 正體中文翻譯:白貓、薩斯",
 	"light-armor": "輕甲",
 	"heavy-armor": "重甲",
 	"power-armor": "動力裝甲",
@@ -444,19 +444,19 @@
 	"spell-like abilities": "SPELL-LIKE ABILITIES",
 	"select range": "SELECT RANGE",
 	"dc-affected-by-buffs-to": "DC AFFECTED BY BUFFS TO",
-	"character-info-help-first-line": "This section stores all the basic information on your character. Most of these fields have no effect on the sheet itself, but there are two that do:",
-	"character-info-help-second-line": "<b>Class/Level:</b> is filled by the sheet as you enter your class(es) and level(s) in the class tab.",
-	"character-info-help-third-line": "<b>Race HP:</b> This is used by the sheet to calculate your hp and stores your racial starting hp.",
-	"class-info-help-first-line": "This section stores all the basic information on your class(es). The fields are organized into the following columns:",
-	"class-info-help-second-line": "<b>Name:</b> The name of the class. This is concatenated with level to create the class/level field in the character details screen.",
-	"class-info-help-third-line": "<b>Level:</b> The level of this class. In addition to affecting the class/level field, this is used to calculate much of your character's info from health to skills",
-	"class-info-help-fourth-line": "<b>Stamina Points:</b> How many stamina points the class grants at each level.",
-	"class-info-help-fifth-line": "<b>Hit Points:</b> How many hit points the class grants at each level.",
+	"character-info-help-first-line": "本節將存儲有關您的角色的所有基本信息。這些斷落中的大多數對角色表本身沒有影響，但是有兩個部分有影響:",
+	"character-info-help-second-line": "<b>職業/等級:</b> 本頁的職業和等級，將由職業表中的設定自動填充。",
+	"character-info-help-third-line": "<b>種族 HP:</b> 本頁使用它來計算您的 HP 並存儲您的種族起始 HP。",
+	"class-info-help-first-line": "本節儲存職業的所有基本信息。 這些部分被組織成以下各列:",
+	"class-info-help-second-line": "<b>名稱:</b> 職業的名稱。 這與等級連接到角色詳細信息中的職業/等級部分。",
+	"class-info-help-third-line": "<b>等級:</b> 職業的等級。 除了影響職業/等級部分外，還用於計算從健康到技能的大部分角色信息",
+	"class-info-help-fourth-line": "<b>耐力點(SP):</b> 這個職業在每個級別獲得多少耐力點。",
+	"class-info-help-fifth-line": "<b>生命值(HP):</b> 這個職業在每個級別獲得多少生命值。",
 	"class-info-help-sixth-line": "<b>Base Attack Bonus Progression:</b> The progression of the class' BAB. 1/2 BAB classes will have a bab of 0 at level 1 and 10 at level 20. 3/4 BAB classes will have a bab of 0 at level 1 and 15 at level 20. Full BAB (or 1) will have a BAB equal to their level.",
-	"class-info-help-seventh-line": "<b>Fortitude/Reflex/Will Save Progressions:</b> The progression of the saves. There are two progressions: Good, which starts at 2, and Poor which starts at 0.",
-	"class-info-help-eighth-line": "<b>Skills/Level:</b> The number of skill points your class grants each level, not counting intelligence bonus",
-	"class-info-help-ninth-line": "<b>Key Ability:</b> The class' key ability score",
-	"class-info-help-tenth-line": "<b>Spells Checkbox:</b> Checked if the class casts spells",
+	"class-info-help-seventh-line": "<b>強韌/反射/意志 豁免的級數:</b> 豁免的級數。 有兩個級數: 強, 從 2 開始、弱，從 0 開始。",
+	"class-info-help-eighth-line": "<b>技能/等級:</b> 不包括智力加值，你的職業在每一級所獲得的技能點數",
+	"class-info-help-ninth-line": "<b>關鍵屬性:</b> 職業的關鍵屬性",
+	"class-info-help-tenth-line": "<b>法術勾選框:</b> 如果職業可以施法則勾選",
 	"spellclass-info-help-first-line": "This section stores the details of all your spellcasting classes. A panel is created for each class that casts spells, and each panel has the following editable fields:",
 	"spellclass-info-help-second-line": "<b>Casting Ability:</b> The ability used to cast spells.",
 	"spellclass-info-help-third-line": "<b>Spell Progression:</b> How quickly the class gains new spell levels. Technomancer and Mystic are partial spell casters. Other progressions are included to support importing pathfinder classes.",
