Starfinder update translation fr

--- a/Starfinder by Roll20/translations/fr.json
+++ b/Starfinder by Roll20/translations/fr.json
@@ -120,7 +120,7 @@
 	"fort": "VIG",
 	"ref": "RÉF",
 	"will": "VOL",
-	"skills": "COMP.",
+	"skills": "COMPÉTENCES",
 	"abi": "CAR.",
 	"spell": "SORT",
 	"poor": "FAIBLE",
@@ -214,7 +214,7 @@
 	"wealth": "RICHESSE",
 	"upbs": "BPUs",
 	"num": "NB",
-	"bulk": "ENCOMBREMENT",
+	"bulk": "VOLUME",
 	"cost": "COÛT",
 	"abilities": "COMPÉTENCES",
 	"constant": "CONSTANT",
