--- a/Starfinder by Roll20/translations/fr.json
+++ b/Starfinder by Roll20/translations/fr.json
@@ -416,7 +416,7 @@
 	"disclaimer": "© 2018. Starfinder, le logo Starfinder, le golem de Paizo, tous les titres de Paizo, les règles du jeu de rôle Starfinder et les noms de personnages de Paizo et les ressemblances significatives sont la propriété et le copyright de Paizo, Inc. aux États-Unis et dans les autres pays.",
 	"light-armor": "ARMURE LÉGÈRE",
 	"heavy-armor": "ARMURE LOURDE",
-	"power-armor": "ARMURE ALIMENTÉE",
+	"power-armor": "ARMURE ASSISTÉE",
 	"basic-melee": "ARMES CaC SIMPLES",
 	"advanced-melee": "ARMES CaC ÉVOLUÉES",
 	"small-arms": "ARMES LÉGÈRES",
