--- a/Starfinder by Roll20/translations/fr.json
+++ b/Starfinder by Roll20/translations/fr.json
@@ -189,7 +189,7 @@
 	"atk-u": "JET D'ATTAQUE",
 	"rng": "PORTÉE",
 	"melee": "CaC",
-	"ranged": "À DISTANCE",
+	"ranged": "DISTANCE",
 	"dmg": "DÉGÂTS",
 	"type": "TYPE",
 	"damage-type": "TYPE DE DÉGÂTS",
@@ -216,9 +216,9 @@
 	"num": "NB",
 	"bulk": "VOLUME",
 	"cost": "COÛT",
-	"abilities": "COMPÉTENCES",
-	"constant": "CONSTANT",
-	"at-will": "A VOLONTÉ",
+	"abilities": "CAPACITÉS",
+	"constant": "CONSTANTE",
+	"at-will": "À VOLONTÉ",
 	"x/day": "X/JOUR",
 	"source": "SOURCE ",
 	"extraordinary": "EXTRAORDINAIRE",
