--- a/Starfinder by Roll20/translations/fr.json
+++ b/Starfinder by Roll20/translations/fr.json
@@ -1,7 +1,7 @@
 {
 	"name": "NOM",
 	"ability-type": "TYPE DE CARACTÉRISTIQUE",
-	"quantity": "QUANTITÉ",
+	"quantity": "NOMBRE",
 	"track": "ÉCHELLE",
 	"uses": "USAGES",
 	"spell-penetration": "Efficacité des sorts accrue",
@@ -59,25 +59,25 @@
 	"pliable": "MALLÉABLE",
 	"catatonic": "CATATONIQUE",
 	"asleep": "ENDORMI",
-	"bleeding": "SAIGNEMENT",
+	"bleeding": "HÉMORRAGIE",
 	"blinded": "AVEUGLÉ",
-	"burning": "EMBRASÉ",
-	"cowering": "RECROCQUEVILLÉ",
+	"burning": "ENFLAMMÉ",
+	"cowering": "RECROQUEVILLÉ",
 	"dazed": "HÉBÉTÉ",
 	"dazzled": "ÉBLOUI",
 	"deafened": "ASSOURDI",
 	"dying": "MOURANT",
 	"encumbered": "ENCOMBRÉ",
-	"entangled": "EMPÊTRÉ",
+	"entangled": "ENCHEVÊTRÉ",
 	"exhausted": "EPUISÉ",
 	"fascinated": "FASCINÉ",
 	"fatigued": "FATIGUÉ",
-	"flat_footed": "PRIS AU DÉPOURVU",
+	"flat_footed": "P. AU DÉPOURVU",
 	"frightened": "EFFRAYÉ",
 	"grappled": "AGRUIPÉ",
-	"helpless": "IMPUISSANT",
+	"helpless": "SANS DÉFENSE",
 	"nauseated": "NAUSSÉEUX",
-	"negative_levels": "NIVEAUX NEGATIFS",
+	"negative_levels": "NIV. NEGATIFS",
 	"off_kilter": "EN APESENTEUR",
 	"off_target": "IMPRÉCIS",
 	"overburdened": "SURCHARGÉ",
@@ -209,7 +209,7 @@
 	"not carried": "NON TRANSPORTÉ",
 	"equipped": "EQUIPÉ",
 	"encumber": "ENCOMBRÉ",
-	"over": "SURCHARGE",
+	"over": "SURCHARGÉ",
 	"credits": "CRÉDITS",
 	"wealth": "RICHESSE",
 	"upbs": "BPUs",
