--- a/Starfinder by Roll20/translations/fr.json
+++ b/Starfinder by Roll20/translations/fr.json
@@ -1,6 +1,6 @@
 {
 	"name": "NOM",
-	"ability-type": "TYPE DE CARACTÉRISTIQUE",
+	"ability-type": "TYPE",
 	"quantity": "NOMBRE",
 	"track": "ÉCHELLE",
 	"uses": "USAGES",
