--- a/Starfinder by Roll20/translations/fr.json
+++ b/Starfinder by Roll20/translations/fr.json
@@ -11,7 +11,7 @@
 	"select": "SELECTIONNER",
 	"spells": "SORTS",
 	"comms": "COMMUNICATION",
-	"spell-resistance-abbrv": "RS",
+	"spell-resistance-abbrv": "RM",
 	"rolls-are": "LES JETS SONT",
 	"public": "PUBLICS",
 	"patched": "RÉPARÉ",
@@ -31,7 +31,7 @@
 	"physical-disease": "MALADIE PHYSIQUE",
 	"healthy": "BONNE SANTÉ",
 	"latent": "LATENT",
-	"sensor-bonus": "BONUS CAPTEURS",
+	"sensor-bonus": "BONUS DÉTECTEURS",
 	"update-pilot-tooltip": "Prendre les rangs de Pilotage de la feuille de pilote ouverte",
 	"weakened": "AFFAIBLI",
 	"impaired": "HANDICAPÉ",
