--- a/Starfinder by Roll20/translations/fr.json
+++ b/Starfinder by Roll20/translations/fr.json
@@ -192,7 +192,7 @@
 	"ranged": "DISTANCE",
 	"dmg": "DÉGÂTS",
 	"type": "TYPE",
-	"damage-type": "TYPE DE DÉGÂTS",
+	"damage-type": "TYPE",
 	"crit-damage": "CRITIQUE",
 	"ammo": "Munitions",
 	"usage": "UTILISATION",
@@ -380,7 +380,7 @@
 	"fine": "INFIME",
 	"diminutive": "MINUSCULE",
 	"long": "LONG",
-	"crit-effect": "EFFET CRITIQUE",
+	"crit-effect": "CRITIQUE",
 	"ability_checks": "TEST CARACTÉRISTIQUE",
 	"ability_scores": "CARACTÉRISTIQUE",
 	"crb-equipment": "ÉQUIPEMENT DU LDB",
