Update Cypher Systems by Roll20/translations/pt.json

--- a/Cypher Systems by Roll20/translations/pt.json
+++ b/Cypher Systems by Roll20/translations/pt.json
@@ -243,5 +243,5 @@
     "specialized-abbreviation": "E",
     "used": "Usado"
     "simple-font": "Fonte simples",
-    "limit-subsection-height": "Limitar altura das sub-seções"
+    "limit-subsection-height": "Limitar altura das subseções"
 }
