--- a/Starfinder by Roll20/translations/fr.json
+++ b/Starfinder by Roll20/translations/fr.json
@@ -389,7 +389,7 @@
 	"power": "ALIMENTATION",
 	"which-gunner": "Quel Cannonier",
 	"range": "PORTÉE",
-	"hexes": "HEXAGONES",
+	"hexes": "HEXA.",
 	"light": "LÉGERE",
 	"heavy": "LOURDE",
 	"capital": "CAPITALE",
@@ -499,10 +499,10 @@
 	"spell dc": "DD : Sorts",
 	"custom attribute": "Attribut personalisé",
 	"custom mod": "Custom Mod",
-	"mod method": "Mod Input Method",
-	"manual": "Manual",
+	"mod method": "Méthode d'intégration des modificateurs",
+	"manual": "Manuel",
 	"wizard": "Wizard",
-	"skill points": "Skill Points",
+	"skill points": "Points de Compétences",
 	"profession": "Profession",
 	"untyped bonus": "Bonus sans Type",
 	"armor bonus": "Bonus d'Armure",
