--- a/Starfinder by Roll20/translations/fr.json
+++ b/Starfinder by Roll20/translations/fr.json
@@ -409,9 +409,9 @@
 	"huge": "TRÈS GRANDE",
 	"gargantuan": "GIGANTESQUE",
 	"colossal": "COLOSSALLE",
-	"clumsy": "DÉPLORABLE",
-	"average": "MOYENNE",
-	"perfect": "PARFAITE",
+	"clumsy": "DÉPLORABLE (4)",
+	"average": "MOYENNE (2)",
+	"perfect": "PARFAITE (0)",
 	"n/a": "N/A",
 	"disclaimer": "© 2018. Starfinder, le logo Starfinder, le golem de Paizo, tous les titres de Paizo, les règles du jeu de rôle Starfinder et les noms de personnages de Paizo et les ressemblances significatives sont la propriété et le copyright de Paizo, Inc. aux États-Unis et dans les autres pays.",
 	"light-armor": "ARMURE LÉGÈRE",
