--- a/Cypher Systems by Roll20/translations/pt.json
+++ b/Cypher Systems by Roll20/translations/pt.json
@@ -241,7 +241,7 @@
     "untrained-abbreviation": "N",
     "trained-abbreviation": "T",
     "specialized-abbreviation": "E",
-    "used": "Usado"
+    "used": "Usado",
     "simple-font": "Fonte simples",
     "limit-subsection-height": "Limitar altura das subseções"
 }
