--- a/Pathfinder Community/translations/zu.json
+++ b/Pathfinder Community/translations/zu.json
@@ -1,4 +1,6 @@
 {
+	"conditions-list": "crwdns106302:0crwdne106302:0",
+	"skills-list": "crwdns106304:0crwdne106304:0",
 	"1-ordinal": "crwdns96080:0crwdne96080:0",
 	"1-ordinal-class": "crwdns96082:0crwdne96082:0",
 	"1-ordinal-class-level": "crwdns96084:0crwdne96084:0",
