--- a/Starfinder by Roll20/translations/de.json
+++ b/Starfinder by Roll20/translations/de.json
@@ -195,7 +195,7 @@
 	"damage-type": "SCHADENSTYP",
 	"crit-damage": "KRIT.SCHADEN",
 	"ammo": "MUNITION",
-	"usage": "VERWENDUNG",
+	"usage": "ZEITAUFWAND",
 	"special": "SPEZIAL",
 	"additional-attack": "ZUSÄTZL.ANGRIFFE",
 	"roll-full-attack_": "WÜRFEL Vollen Angriff: ",
@@ -238,7 +238,7 @@
 	"fort-save": "ZÄHIGKEITSWURF",
 	"ref-save": "REFLEXWURF",
 	"will-save": "WILLENSWURF",
-	"A-Sucessful-Save:": "A Successful Save:",
+	"A-Sucessful-Save:": "Ein erfolgreicher Wurf:",
 	"spellclasses": "SPRUCHKLASSE",
 	"ability": "ATTRIBUT",
 	"progress": "FORTSCHRITT",
@@ -537,7 +537,7 @@
 	"fort-saves": "Zähigkeits Abwehr",
 	"will-saves": "Willen Abwehr",
 	"all-saves": "Alle Rettungswürfe",
-	"melee weapon attacks": "Melee Weapon Attacks",
-	"ranged weapon attacks": "Ranged Weapon Attacks",
-	"custom": "Custom"
+	"melee weapon attacks": "Nahkampfwaffenangriff",
+	"ranged weapon attacks": "Fernwaffenangriff",
+	"custom": "Eigenes"
 }
