--- a/Starfinder by Roll20/translations/fr.json
+++ b/Starfinder by Roll20/translations/fr.json
@@ -120,7 +120,7 @@
 	"fort": "VIG",
 	"ref": "RÉF",
 	"will": "VOL",
-	"skills": "COMPÉTENCES",
+	"skills": "COMP.",
 	"abi": "CAR.",
 	"spell": "SORT",
 	"poor": "FAIBLE",
