--- a/Forbidden_Lands/translations/fr.json
+++ b/Forbidden_Lands/translations/fr.json
@@ -115,6 +115,8 @@
 	"on-mount": "Sur la monture",
 	"one-hand-abbr": "1M",
 	"other": "Autre",
+	"pack-rat": "Pack Rat Talent?",
+	"pack-rat-title": "You can carry additional items.",
 	"parry": "Parade",
 	"performance": "Représentation",
 	"personal": "Personnel",
@@ -128,6 +130,9 @@
 	"quantity-abbr": "Qté",
 	"range": "Portée",
 	"rank": "Rang",
+	"rank-1-pack-rat": "Rank 1 (+2)",
+	"rank-2-pack-rat": "Rank 2 (+5)",
+	"rank-3-pack-rat": "Rank 3 (+10)",
 	"rating": "Indice",
 	"relationships-u": "RELATIONS",
 	"reputation": "Réputation",
