--- a/Forbidden_Lands/translations/zu.json
+++ b/Forbidden_Lands/translations/zu.json
@@ -115,6 +115,8 @@
 	"on-mount": "crwdns91004:0crwdne91004:0",
 	"one-hand-abbr": "crwdns91006:0crwdne91006:0",
 	"other": "crwdns91008:0crwdne91008:0",
+	"pack-rat": "crwdns106306:0crwdne106306:0",
+	"pack-rat-title": "crwdns106308:0crwdne106308:0",
 	"parry": "crwdns91010:0crwdne91010:0",
 	"performance": "crwdns91012:0crwdne91012:0",
 	"personal": "crwdns91014:0crwdne91014:0",
@@ -128,6 +130,9 @@
 	"quantity-abbr": "crwdns91030:0crwdne91030:0",
 	"range": "crwdns91032:0crwdne91032:0",
 	"rank": "crwdns91034:0crwdne91034:0",
+	"rank-1-pack-rat": "crwdns106310:0crwdne106310:0",
+	"rank-2-pack-rat": "crwdns106312:0crwdne106312:0",
+	"rank-3-pack-rat": "crwdns106314:0crwdne106314:0",
 	"rating": "crwdns91036:0crwdne91036:0",
 	"relationships-u": "crwdns91038:0crwdne91038:0",
 	"reputation": "crwdns91040:0crwdne91040:0",
