--- a/Call_of_Cthulhu_7th_Ed/translations/ko.json
+++ b/Call_of_Cthulhu_7th_Ed/translations/ko.json
@@ -240,6 +240,7 @@
 	"Other Skill #9": "다른 기능 #9",
 	"Other Skill #10": "다른 기능 #10",
 	"companions&mounts-u": "Companions & Mounts",
+	"vehicles-u": "Vehicles",
 	"san-u": "SAN",
 	"HP-z": "HP",
 	"armor-z": "Armor",
