--- a/Call_of_Cthulhu_7th_Ed/translations/pt.json
+++ b/Call_of_Cthulhu_7th_Ed/translations/pt.json
@@ -1,23 +1,23 @@
 {
 	"investigatorinfo-u": "Informações do investigador",
-	"heroinfo-u": "Hero Info",
+	"heroinfo-u": "Informações do Herói",
 	"name-u": "Nome",
 	"player-u": "Jogador",
 	"occupation-u": "Ocupação",
-	"archetype-u": "Archetype",
+	"archetype-u": "Arquétipo",
 	"age-u": "Idade",
 	"sex-u": "Sexo",
 	"residence-u": "Residência",
 	"birthplace-u": "Local de nascimento",
 	"characteristics-u": "Características",
 	"STR-u": "FOR",
-	"STR-r-txt": "STR Roll",
+	"STR-r-txt": "Rolagem FOR",
 	"DEX-u": "DES",
-	"DEX-r-txt": "DEX Roll",
+	"DEX-r-txt": "Rolagem DES",
 	"POW-u": "POD",
-	"POW-r-txt": "POW Roll",
+	"POW-r-txt": "Rolagem POD",
 	"CON-u": "CON",
-	"CON-r-txt": "CON Roll",
+	"CON-r-txt": "Rolagem CON",
 	"APP-u": "APA",
 	"APP-r-txt": "APP Roll",
 	"EDU-u": "EDU",
@@ -25,34 +25,34 @@
 	"SIZ-u": "TAM",
 	"SIZ-r-txt": "SIZ Roll",
 	"INT-u": "INT",
-	"INT-r-txt": "INT Roll",
+	"INT-r-txt": "Rolagem INT",
 	"Move rate-u": "Taxa de movimentação",
 	"Move rate-r-txt": "Move rate Roll",
 	"HP-u": "PV",
-	"HP-r-txt": "Hit Points Roll",
-	"": "current",
+	"HP-r-txt": "Rolagem Ponto de Vida",
+	"": "atual",
 	"majorwound-u": "",
 	"pulphp-u": "",
 	"luck-u": "Sorte",
-	"luck-r-txt": "Luck Roll",
+	"luck-r-txt": "Rolagem de Sorte",
 	"current": "atual",
 	"damagebonus-u": "Bônus de dano",
 	"None": "Nenhum",
 	"build-u": "Estrutura",
 	"sanity-u": "Sanidade",
 	"pulp-z": "Pulp",
-	"sanity-r-txt": "Sanity Roll",
-	"start": "start",
-	"tempinsane-u": "Temp. Insane",
-	"indefinsane-u": "Indef. Insane",
+	"sanity-r-txt": "Rolagem Sanidade",
+	"start": "iniciar",
+	"tempinsane-u": "Insanidade Temp.",
+	"indefinsane-u": "Insanidade Indef.",
 	"bouts-of-madness-u": "Bouts of Madness",
 	"pulp-bouts-of-madness-u": "Pulp Bouts of Madness",
 	"bom-real-time": "Real-Time",
 	"bom-summary": "Summary",
 	"stable": "Stable",
 	"magicpoints-u": "Pontos de magia",
-	"dicerolls-u": "Dice Rolls",
-	"custom-u": "Custom",
+	"dicerolls-u": "Rolagem Dados",
+	"custom-u": "Personalizado",
 	"investigatorskills-u": "Habilidades de investigador",
 	"accounting_da-u": "Accounting(10%)",
 	"animalhandling_da-u": "Animal Handling(15%)",
@@ -240,6 +240,7 @@
 	"Other Skill #9": "Other Skill #9",
 	"Other Skill #10": "Other Skill #10",
 	"companions&mounts-u": "Companions & Mounts",
+	"vehicles-u": "Vehicles",
 	"san-u": "SAN",
 	"HP-z": "HP",
 	"armor-z": "Armor",
