--- a/Das_Schwarze_Auge_5/translations/en.json
+++ b/Das_Schwarze_Auge_5/translations/en.json
@@ -361,7 +361,7 @@
   "Schlafwandler": "Sleepwalker",
   "Schlechte-Angewohnheit-Regel-Pub": "\n\t\t\t\t\t\t<b>Regel:</b> Ein Held kann so viele Schlechte Angewohnheiten wählen, wie er möchte, erhält hierdurch allerdings insgesamt maximal 6 AP. In seltenen Fällen kann der Meister auch Erschwernisse auf Gesellschaftstalente vergeben.<br>\n\t\t\t\t\t\t<b>Publikation:</b> VR01 - Regelwerk S. 175",
   "Schlechte-Angewohnheit": "Bad Habit",
-  "Schlechte-Eigenschaft-Regel-Pub": "\n\t\t\t\t\t\t<b>Regel:</b> In jeder Situation, in der der Held mit einem potenziellen Auslöser seiner Schlechten Eigenschaft konfrontiert wird, muss er eine Probe auf Willenskraft bestehen, um sich zu beherrschen. Gelingt ihm diese Probe, ist alles in Ordnung, ansonsten muss er entsprechend der Schlechten Eigenschaft agieren. Seine Schlechte Eigenschaft hat ihn so lange im Griff, wie er dem Auslöser ausgesetzt ist.<br>\n\t\t\t\t\t\tDer Meister kann für die Probe auf Willenskraft entsprechend der Stärke des Auslösers Erschwernisse oder Erleichterungen aussprechen. Es dürfen bis zu zwei Schlechte Eigenschaften pro Held gewählt werden.<br>\n\t\t\t\t\t\tKombinationen, die sich ausschließen (z.B. Geiz und Verschwendungssucht), dürfen nicht gewählt werden. Das letzte Wort darüber hat der Spielleiter.<br>\n\t\t\t\t\t\t<b>Publikation:</b> VR01 - Regelwerk S. 176",
+  "Schlechte-Eigenschaft-Regel-Pub": "\n\t\t\t\t\t\t<b>Rules:</b> When confronting possible triggers, characters must succeed at a <i>Willpower</i> check or else act out their Negative Trait, which controls them as long as they remain in the trigger’s presence.<br>\n                                                GM-assigned bonuses and penalties for <i>Willpower</i> checks depend on the trigger’s severity.<br>\n                                                You can choose up to two Negative Traits per character. You can’t take a combination that doesn’t make sense (combining Stinginess with Wastefulness, for example). The GM has the final say.<br>\n\t\t\t\t\t\t<b>Publication:</b> VR01 - Core Rules p. 173",
   "Schlechte-Eigenschaft": "Negative trait",
   "Schlechte-Regeneration-Astralenergie-Regel-Pub": "\n\t\t\t\t\t\t<b>Regel:</b> Für jede Stufe des Nachteils muss der Held beim Regenerationswurf 1 Punkt abziehen (bis zu einem Minimum von 0).<br>\n\t\t\t\t\t\t<b>Publikation:</b> VR01 - Regelwerk S. 176",
   "Schlechte-Regeneration-Astralenergie": "Weak Regeneration (Arcane Energy)",
@@ -672,7 +672,7 @@
   "KK": "FOR",
   "BE": "ENC",
   "Talent": "Skill",
-  "Eigenschaften": "Eigenschaften",
+  "Eigenschaften": "Attributes",
   "FW": "SR",
   "Info": "Info<span data-i18n=\"Talent-Erklärung\">Weitere Mod. &amp; Regeln<br>+: Erleichterung<br>-: Erschwernis<br>AG: Neues Anwendungsgebiet<br>EM: Neue Einsatzmöglichkeit<br>QS: Erhöhung der QS<br>BG: Berufsgeheimnis</span>",
   "Talent-Erklärung": "Weitere Mod. &amp; Regeln<br>+: Erleichterung<br>-: Erschwernis<br>AG: Neues Anwendungsgebiet<br>EM: Neue Einsatzmöglichkeit<br>QS: Erhöhung der QS<br>BG: Berufsgeheimnis",
