--- a/Pathfinder 2 Playtest by Roll20/translations/pt.json
+++ b/Pathfinder 2 Playtest by Roll20/translations/pt.json
@@ -1,21 +1,21 @@
 {
-	"name": "NAME",
-	"ability-type": "ABILITY TYPE",
-	"quantity": "QUANTITY",
+	"name": "NOME",
+	"ability-type": "TIPO HABILIDADE",
+	"quantity": "QUANTIDADE",
 	"track": "TRACK",
-	"uses": "USES",
-	"attack-affected-by-buffs-to": "ATTACK ROLL AFFECTED BY BUFFS TO",
-	"damage-affected-by-buffs-to": "DAMAGE AFFECTED BY BUFFS TO",
+	"uses": "USOS",
+	"attack-affected-by-buffs-to": "ROLAGEM ATAQUE AFETADA POR BUFFS",
+	"damage-affected-by-buffs-to": "Dano afetado por Buffs para",
 	"core": "CORE",
-	"select": "SELECT",
-	"spells&powers": "SPELLS/POWERS",
+	"select": "SELECIONE",
+	"spells&powers": "MAGIAS/PODERES",
 	"comms": "COMMS",
 	"rolls-are": "ROLLS ARE",
-	"public": "PUBLIC",
+	"public": "PUBLICO",
 	"patched": "PATCHED",
 	"unpatched": "UNPATCHED",
-	"private": "PRIVATE",
-	"display-mode": "DISPLAY MODE",
+	"private": "PRIVADO",
+	"display-mode": "MODO DE EXIBIÇÃO",
 	"pc": "PC",
 	"senses": "SENSES",
 	"update-pilot": "UPDATE PILOT",
