--- a/Call_of_Cthulhu_7th_Ed/translations/de.json
+++ b/Call_of_Cthulhu_7th_Ed/translations/de.json
@@ -240,6 +240,7 @@
 	"Other Skill #9": "Andere Fertigkeit #9",
 	"Other Skill #10": "Andere Fertigkeit #10",
 	"companions&mounts-u": "Companions & Mounts",
+	"vehicles-u": "Vehicles",
 	"san-u": "SAN",
 	"HP-z": "HP",
 	"armor-z": "Armor",
