--- a/Call_of_Cthulhu_7th_Ed/translations/es.json
+++ b/Call_of_Cthulhu_7th_Ed/translations/es.json
@@ -240,6 +240,7 @@
 	"Other Skill #9": "Other Skill #9",
 	"Other Skill #10": "Other Skill #10",
 	"companions&mounts-u": "Companions & Mounts",
+	"vehicles-u": "Vehicles",
 	"san-u": "SAN",
 	"HP-z": "HP",
 	"armor-z": "Armor",
