--- a/Call_of_Cthulhu_7th_Ed/translations/fr.json
+++ b/Call_of_Cthulhu_7th_Ed/translations/fr.json
@@ -240,6 +240,7 @@
 	"Other Skill #9": "Autre Compétence #9",
 	"Other Skill #10": "Autre Compétence #10",
 	"companions&mounts-u": "Montures et Compagnions",
+	"vehicles-u": "Vehicles",
 	"san-u": "SAN",
 	"HP-z": "PV",
 	"armor-z": "Armure :",
