--- a/Call_of_Cthulhu_7th_Ed/translations/zu.json
+++ b/Call_of_Cthulhu_7th_Ed/translations/zu.json
@@ -240,6 +240,7 @@
 	"Other Skill #9": "crwdns64816:0crwdne64816:0",
 	"Other Skill #10": "crwdns64817:0crwdne64817:0",
 	"companions&mounts-u": "crwdns105754:0crwdne105754:0",
+	"vehicles-u": "crwdns106316:0crwdne106316:0",
 	"san-u": "crwdns87964:0crwdne87964:0",
 	"HP-z": "crwdns86780:0crwdne86780:0",
 	"armor-z": "crwdns86782:0crwdne86782:0",
