--- a/StarWars5E/translations/zu.json
+++ b/StarWars5E/translations/zu.json
@@ -220,7 +220,7 @@
 	"monk": "crwdns76687:0crwdne76687:0",
 	"guardian": "crwdns76688:0crwdne76688:0",
 	"scout": "crwdns76689:0crwdne76689:0",
-	"infiltrator": "crwdns76690:0crwdne76690:0",
+	"operative": "crwdns106348:0crwdne106348:0",
 	"sorcerer": "crwdns76691:0crwdne76691:0",
 	"sentinel": "crwdns76692:0crwdne76692:0",
 	"consular": "crwdns76693:0crwdne76693:0",
@@ -378,7 +378,7 @@
 	"power-caster-lvl:-u": "crwdns76845:0crwdne76845:0",
 	"halfling-luck-u": "crwdns76846:0crwdne76846:0",
 	"tech-fighter-u": "crwdns76847:0crwdne76847:0",
-	"tech-infiltrator-u": "crwdns76848:0crwdne76848:0",
+	"tech-operative-u": "crwdns106350:0crwdne106350:0",
 	"class-options-u": "crwdns76849:0{class}crwdne76849:0",
 	"class:-u": "crwdns76850:0crwdne76850:0",
 	"subclass:-u": "crwdns76851:0crwdne76851:0",
@@ -395,7 +395,7 @@
 	"power-slots:-u": "crwdns76862:0crwdne76862:0",
 	"power-full-u": "crwdns76863:0crwdne76863:0",
 	"power-half-u": "crwdns76864:0crwdne76864:0",
-	"power-third-u": "crwdns76865:0crwdne76865:0",
+	"power-third-u": "crwdns106352:0crwdne106352:0",
 	"cust-class-opts": "crwdns76866:0crwdne76866:0",
 	"normal": "crwdns76867:0crwdne76867:0",
 	"expirtise": "crwdns76868:0crwdne76868:0",
