--- a/13th Age by Roll20/translations/pt.json
+++ b/13th Age by Roll20/translations/pt.json
@@ -31,8 +31,8 @@
     "daily": "Diária",
     "damage-on-melee-miss": "Dano por Erro Corpo-a-Corpo",
     "damage-on-ranged-miss": "Dano por Erro À Distância",
-    "death-save": "Resistência Contra a Morte",
-    "death-save-u": "Resistência Contra a Morte",
+    "death-save": "Teste Contra a Morte",
+    "death-save-u": "Teste Contra a Morte",
     "details": "Detalhes",
     "dex-u": "DES",
     "dexterity": "Destreza",
@@ -48,14 +48,14 @@
     "far-away": "Distante",
     "feature": "Proeza",
     "final-verse": "Verso-Final",
-    "flat-hp-mod-from-magic-items": "Modificador de PV de Itens Mágicos",
-    "flat-initiative-mod": "Modificador do meio Iniciativa",
-    "flat-recovery-mod": "Modificador do meio Recuperação",
+    "flat-hp-mod-from-magic-items": "Mod. de PV de Itens Mágicos",
+    "flat-initiative-mod": "Mod. do meio Iniciativa",
+    "flat-recovery-mod": "Mod. do meio Recuperação",
     "flexible-action": "Ataques Flexíveis",
     "free-action": "Ação Livre",
     "hard-16": "Difícil (16+)",
     "help-options": "Estes são números de base necessários para os cálculos automáticos abaixo. Depois de inserir esses números, recomendamos que você clique no ícone de roda dentada no canto superior direito para ocultar essa seção.",
-    "hit": "Golpe",
+    "hit": "Dano",
     "icon-relationships": "Relacionamento com os Ícones",
     "improved": "Melhoramento",
     "initiative": "Iniciativa",
@@ -72,7 +72,7 @@
     "max-hp": "PV Max",
     "md-u": "DM",
     "melee-basic-attack": "Ataque corpo-a-corpo",
-    "melee-basic-attack-based-on": "\nAtaque básico corpo-a-corpo baseado em",
+    "melee-basic-attack-based-on": "\nAtq. corpo-a-corpo baseado em",
     "melee-str": "Ataque corpo a corpo(FOR)",
     "melee-weapon-1": "Armas corpo a corpo 1",
     "melee-weapon-2": "Armas corpo a corpo 2",
@@ -98,12 +98,12 @@
     "racial": "Racial",
     "range": "Alcance",
     "ranged-basic-attack": "Ataque Básico à Distância",
-    "ranged-basic-attack-based-on": "Ataque Básico à Distância baseado em",
+    "ranged-basic-attack-based-on": "Atq. à Distância baseado em",
     "ranged-dex": "À distância(DES)",
-    "ranged-weapon-1": "Armas de Longa Distancia 1",
-    "ranged-weapon-2": "Armas de Longa Distancia 2",
-    "ranged-weapon-3": "Armas de Longa Distancia 3",
-    "ranged-weapons": "Armas de Longa Distancia",
+    "ranged-weapon-1": "Armas de Longa Distância 1",
+    "ranged-weapon-2": "Armas de Longa Distância 2",
+    "ranged-weapon-3": "Armas de Longa Distância 3",
+    "ranged-weapons": "Armas de Longa Distância",
     "rapier": "Rapieira",
     "rec-u": "REC",
     "recharge": "Recarga",
