--- a/AGE System/translations/fr.json
+++ b/AGE System/translations/fr.json
@@ -104,7 +104,7 @@
    "communication": "Communication",
    "intelligence": "Intelligence",
    "perception": "Perception",
-   "willpower": "Willpower",
+   "willpower": "Volonté",
    "game-system-u": "SYSTÈME DE JEU",
    "color-selection-u": "SÉLECTION DES COULEURS",
    "black": "Noir",
