--- a/Black_Crusade/translations/fr.json
+++ b/Black_Crusade/translations/fr.json
@@ -16,7 +16,7 @@
 	"archetype-u": "Archétype :",
 	"current-alignment-u": "Alignement Actuel: ",
 	"info-u": "Info",
-	"power-mod-u": "Power Modifier: ",
+	"power-mod-u": "Modificateur de Puissance : ",
 	"cast-u": "Test",
 	"background-u": "Historique:",
 	"player-name-u": "Joueur :",
@@ -93,12 +93,12 @@
 	"blinded-u": "Aveuglé",
 	"blood-loss-u": "Hémorragie",
 	"deafened-u": "Assourdi",
-	"falling-u": "Falling",
+	"falling-u": "Chute",
 	"fire-u": "Feu",
 	"stunned-u": "Sonné",
 	"suffocation-u": "Suffocation",
 	"unconsciousness-u": "Inconscient",
-	"useless-limbs-u": "Useless Limbs",
+	"useless-limbs-u": "Membres inutilisables",
 	"vacuum-u": "Vide spatial",
 	"amputated-limb-u": "Membre amputé",
 	"lost-hand-u": "Main perdue",
@@ -118,7 +118,7 @@
 	"ag-u": "Ag",
 	"s-u": "F",
 	"athletics-u": "Athlétisme",
-	"t-u": "E",
+	"t-u": "(E)",
 	"awareness-u": "Vigilance",
 	"per-u": "Per",
 	"fel-u": "Soc",
@@ -187,7 +187,7 @@
 	"experience-u": "Expérience",
 	"xp-to-spend-u": "XP restants:",
 	"total-spent-u": "Total XP dépensés:",
-	"advancements-taken-u": "Advancements Taken:",
+	"advancements-taken-u": "Améliorations choisies :",
 	"zero-u": "0",
 	"mental-disorders-u": "Troubles Mentaux",
 	"gifts-of-the-gods-u": "Dons des dieux",
@@ -199,12 +199,12 @@
 	"appearance-u": "Apparence :",
 	"personality-u": "Personnalité :",
 	"weaponskill-u": "CC",
-	"unnatural-characteristics-u": "Unnatural Characteristics",
-	"armor-bonus-u": "AB",
+	"unnatural-characteristics-u": "Caractéristiques non naturelles",
+	"armor-bonus-u": "BA",
 	"multiplied-by-2-u": "x2",
 	"multiplied-by-3-u": "x3",
 	"multiplied-by-6-u": "x6",
-	"soak-u": "Soak",
+	"soak-u": "Encaisser",
 	"arm-right-u": "B.Dr.",
 	"arm-left-u": "B.Gau.",
 	"leg-right-u": "J.Dr.",
@@ -245,7 +245,7 @@
 	"integrity-u": "Intégrité :",
 	"crew-u": "Équipage :",
 	"weapons-u": "Armes",
-	"focus-power-test-u": "Focus Power Test",
+	"focus-power-test-u": "Test de Focus de Pouvoir",
 	"willpower": "Volonté",
 	"psychic-powers-u": "Pouvoirs psychiques",
 	"bound-u": "Assermenté",
@@ -255,7 +255,7 @@
 	"action-u": "Action :",
 	"focus-power-u": "Test Psychique :",
 	"subtype-u": "Sous-type :",
-	"sustained-u": "Sustained:",
+	"sustained-u": "Alimenté:",
 	"damage-type-u": "Type de dégâts:",
 	"e-u": "E",
 	"mod-u": "Mod : ",
@@ -292,7 +292,7 @@
 	"overbearing-u": "Dominateur",
 	"attributes-u": "Attributs:",
 	"cybernetics-u": "Cybernétiques",
-	"max-carry-wt-(sb+tb)-u": "Base Carry Weight S+T: ",
+	"max-carry-wt-(sb+tb)-u": "Poids portable de base F+E :",
 	"peers-u": "Pairs",
 	"peer-u": "Pair : ",
 	"enemies-u": "Ennemis",
