--- a/Cyberpunk 2020/translations/fr.json
+++ b/Cyberpunk 2020/translations/fr.json
@@ -91,9 +91,9 @@
 	"cyberpunk": "Cyberpunk 2020 Character Sheet",
 	"cybertech": "Cybertech",
 	"cybertech-2": "Cybertech (2)",
-	"damage": "Damage",
+	"damage": "Dégâts",
 	"damage-plus": "Damage+",
-	"dance": "Dance",
+	"dance": "Danse",
 	"data-wall-strength": "Data Wall Strength",
 	"deck-model": "Deck Model",
 	"deck-speed": "Deck Speed",
@@ -179,14 +179,14 @@
 	"interface": "Interface",
 	"interrogation": "Interrogation",
 	"interview": "Interview",
-	"intimidate": "Intimidate",
+	"intimidate": "Intimidation",
 	"intrusion": "Intrusion",
-	"inventory": "Inventory",
+	"inventory": "Inventaire",
 	"judo": "Judo",
 	"judo-1": "Judo (1)",
 	"jury-rig": "Jury Rig",
-	"karate": "Karate",
-	"karate-2": "Karate (2)",
+	"karate": "Karaté",
+	"karate-2": "Karaté (2)",
 	"keyboard": " Keyboard",
 	"know-language": "Know Language",
 	"know-languages": "Know Languages",
@@ -205,10 +205,10 @@
 	"location-roll": "Location Roll",
 	"long": "Long",
 	"lose-cool": "lose their cool and draws down!",
-	"luck": "Luck",
-	"martial-art-aikido": "Martial Art - Aikido",
+	"luck": "Chance",
+	"martial-art-aikido": "Art martial - Aïkido",
 	"martial-art-animal-kungfu": "Martial Art - Animal Kung Fu",
-	"martial-art-boxing": "Martial Art - Boxing",
+	"martial-art-boxing": "Art martial - Boxe",
 	"martial-art-capoeria": "Martial Art - Capoeria",
 	"martial-art-choi-li-fut": "Martial Art - Choi Li Fut",
 	"martial-art-judo": "Martial Art - Judo",
@@ -217,7 +217,7 @@
 	"martial-art-tae-kwon-do": "Martial Art - Tae Kwon Do",
 	"martial-art-thai-kick-boxing": "Martial Art - Thai Kick Boxing",
 	"martial-art-wrestling": "Martial Art - Wrestling",
-	"martial-arts": "Martial Arts",
+	"martial-arts": "Arts martiaux",
 	"mathematics": "Mathematics",
 	"medical-tech": "Medical Tech",
 	"medium": "Medium",
@@ -337,9 +337,9 @@
 	"silhouetted": "Silhouetted",
 	"simple": "Simple",
 	"size": "Size",
-	"skill": "Skill",
+	"skill": "Compétence",
 	"skill-setup": "Skill Setup",
-	"skills": "Skills",
+	"skills": "Compétences",
 	"small": "Small",
 	"smartgun": "Smartgun/Goggles",
 	"social": "Social",
@@ -360,7 +360,7 @@
 	"system-knowledge": "System Knowledge",
 	"tae-kwon-do": "Tae Kwon Do",
 	"tae-kwon-do-3": "Tae Kwon Do (3)",
-	"target": "Target",
+	"target": "Cible",
 	"target-points": "Target Points",
 	"targeted": "Targeted",
 	"targeted-roll": "Targeted Roll",
@@ -395,10 +395,10 @@
 	"videoboard": " Videoboard",
 	"voxbox": " Voxbox",
 	"wardrobe": "Wardrobe &amp; Style",
-	"weapon": "Weapon",
+	"weapon": "Arme",
 	"weapon-accuracy-abbrv": "WA",
 	"weapon-notes": "Weapon Notes",
-	"weapons": "Weapons",
+	"weapons": "Armes",
 	"weaponsmith": "Weaponsmith",
 	"weaponsmith-2": "Weaponsmith (2)",
 	"wilderness-survival": "Wilderness Survival",
