--- a/Pathfinder Community/translations/zu.json
+++ b/Pathfinder Community/translations/zu.json
@@ -1,4 +1,5 @@
 {
+	"use-header-images": "crwdns106422:0crwdne106422:0",
 	"conditions-list": "crwdns106302:0crwdne106302:0",
 	"skills-list": "crwdns106304:0crwdne106304:0",
 	"1-ordinal": "crwdns96080:0crwdne96080:0",
@@ -1007,7 +1008,7 @@
 	"head": "crwdns98086:0crwdne98086:0",
 	"headband": "crwdns98088:0crwdne98088:0",
 	"header-image": "crwdns98090:0crwdne98090:0",
-	"header-image-default": "crwdns98092:0crwdne98092:0",
+	"header-image-default": "crwdns106424:0crwdne106424:0",
 	"header-image-none": "crwdns98094:0crwdne98094:0",
 	"heading-border-colors": "crwdns98096:0crwdne98096:0",
 	"heal": "crwdns98098:0crwdne98098:0",
