--- a/Shadowrun5thEdition/translations/fr.json
+++ b/Shadowrun5thEdition/translations/fr.json
@@ -86,7 +86,7 @@
     "dam": "Dég",
     "damage": "Dégâts",
     "damagetype": "Dégâts de Combat",
-    "data_processing": "Data Processing",
+    "data_processing": "Traitement des données",
     "dataproc": "Trait. Données",
     "decompiling": "Décompilation",
     "default": "Compétence par défaut",
@@ -185,11 +185,11 @@
     "lang": "Lang..",
     "languageskills": "Compétences linguistiques",
     "leadership": "Commandement",
-    "level": "Level",
+    "level": "Niveau",
     "levelresonance": "Niveau / résonance",
     "licenses": "Permis",
     "liftcarry": "Soulever / Transporter",
-    "limit": "Limit",
+    "limit": "Limite",
     "limits": "Limites",
     "locksmith": "Serrurerie",
     "logic": "Logique",
@@ -209,12 +209,12 @@
     "matrixdevice": "Appareil de la matrice",
     "matrixinit": "Ini matricielle",
     "matrixinitiative": "Initiative Matricielle",
-    "matrixsoak": "Matrix Soak",
+    "matrixsoak": "Encaissement matriciel",
     "medicine": "Médecine",
     "melee": "Mêlée",
     "memory": "Mémoire",
     "mental": "Mental",
-    "mental_limit": "Mental Limit",
+    "mental_limit": "Limite mentale ",
     "mentallimit": "Limite mentale :",
     "metamagic": "Métamagie",
     "metatype": "Métatype",
@@ -236,7 +236,7 @@
     "navigation": "Navigation",
     "near": "Près",
     "negotiation": "Négociation",
-    "none": "None",
+    "none": "Aucun",
     "notes": "Notes",
     "notoriety": "Notoriété",
     "nuyen": "Nuyen",
@@ -256,7 +256,7 @@
     "persona": "Persona",
     "personal": "Données personnelles",
     "physical": "Physique",
-    "physical_limit": "Physical Limit",
+    "physical_limit": "Limite physique ",
     "physicalbonus": "Bonus Physique",
     "physicaldamagetrack": "Moniteur de dégâts physiques",
     "physicallimit": "Limite physique :",
@@ -273,7 +273,7 @@
     "plot": "Complot",
     "power": "Puissance",
     "powers": "Pouvoirs",
-    "pr": "Professional Rating",
+    "pr": "Indice professionnel",
     "prep": "Prép...",
     "primary": "Principale",
     "primaryarmor": "Armure principale",
@@ -322,7 +322,7 @@
     "soak": "Encaisser",
     "soakbonus": "Bonus d'encaissement",
     "social": "Social",
-    "social_limit": "Social Limit",
+    "social_limit": "Limite sociale ",
     "sociallimit": "Limite sociale : ",
     "socialskills": "Compétences sociales",
     "software": "Logiciels",
