--- a/StarWars5E/translations/pt.json
+++ b/StarWars5E/translations/pt.json
@@ -5,11 +5,11 @@
 	"npc-type-u": "NPC TYPE",
 	"npc-type-place": "Medium fiend, any evil alignment",
 	"armor-class-u": "ARMOR CLASS",
-	"class-u": "CLASS",
-	"type-u": "TYPE",
-	"abilities-u": "ABILITIES",
+	"class-u": "CLASSE",
+	"type-u": "TIPO",
+	"abilities-u": "ATRIBUTOS",
 	"npc-armor-place": "scale mail",
-	"hit-points-u": "HIT POINTS",
+	"hit-points-u": "PONTOS DE VIDA",
 	"formula-u": "FORMULA",
 	"speed-u": "SPEED",
 	"npc-speed-place": "30 ft., fly 60ft.",
