--- a/Starfinder by Roll20/translations/fr.json
+++ b/Starfinder by Roll20/translations/fr.json
@@ -350,7 +350,7 @@
 	"save": "SAUVEGARDE",
 	"dc": "DD",
 	"save-effect:": "EFFET DE SAUVEGARDE:",
-	"notes:": "NOTES:",
+	"notes:": "NOTES :",
 	"level": "NIVEAU ",
 	"roll-crit": "JET D'EFFET CRITIQUE",
 	"random-crit": "APPLIQUER UN EFFET CRITIQUE ALÉATOIRE",
@@ -501,7 +501,7 @@
 	"custom mod": "Custom Mod",
 	"mod method": "Méthode d'intégration des modificateurs",
 	"manual": "Manuel",
-	"wizard": "Wizard",
+	"wizard": "Magicien",
 	"skill points": "Points de Compétences",
 	"profession": "Profession",
 	"untyped bonus": "Bonus sans Type",
@@ -537,7 +537,7 @@
 	"fort-saves": "Svg : Vigueur",
 	"will-saves": "Svg : Volonté",
 	"all-saves": "Toutes les Sauvegardes",
-	"melee weapon attacks": "Melee Weapon Attacks",
-	"ranged weapon attacks": "Ranged Weapon Attacks",
+	"melee weapon attacks": "Attaques avec une arme de corps à corps",
+	"ranged weapon attacks": "Attaques avec une arme à distance",
 	"custom": "Custom"
 }
