--- a/Starfinder by Roll20/translations/pt.json
+++ b/Starfinder by Roll20/translations/pt.json
@@ -203,7 +203,7 @@
 	"always": "SEMPRE",
 	"never": "NUNCA",
 	"number-of-attacks:": "NÚMERO DE ATAQUES:",
-	"attacher": "ATTACHER",
+	"attacher": "Detalhes",
 	"equipment": "EQUIPAMENTO",
 	"carried": "CARREGANDO",
 	"not carried": "NÃO CARREGANDO",
@@ -332,7 +332,7 @@
 	"forward-arc": "Arco da Proa",
 	"aft-arc": "Arco da Popa",
 	"weapons": "Armas",
-	"nominal": "NOMINAL",
+	"nominal": "NORMAL",
 	"glitching": "FALHANDO",
 	"malfunctioning": "MALFUNCIONAMENTO",
 	"wrecked": "AVARIADO",
