--- a/Blades in the Dark/translations/es.json
+++ b/Blades in the Dark/translations/es.json
@@ -281,8 +281,8 @@
     "crew_ability_thorn_in_your_side_description": "When you use Stealth or Assault plans against a higher Tier faction, your Tier counts as +1.",
     "crew_ability_uncanny_preparation": "Uncanny Preparation",
     "crew_ability_uncanny_preparation_description": "Twice per session during a Desperate action, improve your effect or position. Describe a flashback that gives you the advantage now (setup action).",
-    "crew_ability_veteran": "Veteran",
-    "crew_ability_veteran_description": "Choose a special ability from another crew (can be taken more than once).",
+    "crew_ability_veteran": "Veterano",
+    "crew_ability_veteran_description": "Elige una capacidad especial de otra banda (se puede elegir más de una vez).",
     "crew_ability_vipers": "Víboras",
     "crew_ability_vipers_description": "Tenéis un +1 al nivel de resultado cuando adquiráis o fabriquéis venenos. Estáis especialmente preparados para ser inmune a los efectos de un veneno cuando lo uséis.",
     "crew_ability_war_dogs": "Perros de Guerra",
